crates/adapters/mock-da/src/snapshots/sov_mock_da__config__tests__manual_block_producing.snap
---
source: crates/adapters/mock-da/src/config.rs
expression: config
---
{
  "connection_string": "sqlite:///tmp/mockda.sqlite?mode=rwc",
  "sender_address": "0f0f0f0f0f0f0f0f0f0f0f0f0f0f0f0f0f0f0f0f0f0f0f0f0f0f0f0f0f0f0f0f",
  "finalization_blocks": 0,
  "block_producing": "manual",
  "randomization": null,
  "failure_behavior": "none"
}
