crates/adapters/mock-da/src/snapshots/sov_mock_da__config__tests__with_randomization_rewind.snap
---
source: crates/adapters/mock-da/src/config.rs
expression: config
---
{
  "connection_string": "sqlite:///tmp/mockda.sqlite?mode=rwc",
  "sender_address": "0f0f0f0f0f0f0f0f0f0f0f0f0f0f0f0f0f0f0f0f0f0f0f0f0f0f0f0f0f0f0f0f",
  "finalization_blocks": 5,
  "block_producing": {
    "periodic": {
      "block_time_ms": 1000
    }
  },
  "randomization": {
    "seed": "0x0000000000000000000000000000000000000000000000000000000000000012",
    "reorg_interval": {
      "start": 3,
      "end": 5
    },
    "behaviour": "rewind"
  },
  "failure_behavior": "none"
}
